Refactored wallet to use UTXOs for memory efficiency.